# taika

./: Cargo.toml  LICENSE  README.md  design.md
src/: app_handler.rs  lib.rs
src/asset_management/: mod.rs
src/events/: mod.rs
src/math/: mod.rs  random.rs
src/rendering/: compute.rs  drawable.rs  mod.rs  primary_draw_pass.rs  shader.rs  vertex.rs
src/window/: mod.rs
