[package]
name = "taika"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Thin abstraction over wgpu and winit"
homepage = "https://github.com/apeltsi/taika"
repository = "https://github.com/apeltsi/taika"
readme = "README.md"
keywords = ["graphics", "wgpu", "winit"]
categories = ["graphics"]

[dependencies]
winit = "0.30.5"
wgpu = {version = "22.1.0"}
tokio = {version = "1", features = ["full"]}
bytemuck = {version = "1.18.0", features = ["derive"]}
rand = "0.8.5"
async-trait = "0.1"
