[package]
name = "taika"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Thin abstraction over wgpu and winit"
homepage = "https://github.com/apeltsi/taika"
repository = "https://github.com/apeltsi/taika"
readme = "README.md"
keywords = ["graphics", "wgpu", "winit"]
categories = ["graphics"]

[dependencies]
winit = "0.30.10"
wgpu = {version = "25.0.0"}
tokio = {version = "1", features = ["full"]}
bytemuck = {version = "1.23.0", features = ["derive"]}
rand = "0.9.1"
async-trait = "0.1"
